# Deepfreeze

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURE_RESTORE.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP_STATUS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test.yml
examples/: demo.py
scripts/: build.sh
services/: README.md  deepfreeze-restore.service  deepfreeze-restore.xml  install-linux.sh  install-windows.bat  uninstall-linux.sh  uninstall-windows.bat
src/deepfreeze/: __init__.py  cli.py  domain.py  filesystem.py  git_integration.py  manager.py  snapshot.py
tests/: __init__.py  test_cli.py  test_domain.py  test_filesystem.py  test_git_integration.py  test_manager.py  test_snapshot.py
